[code] tabelViewCell 데이터 셋팅 & 데이터 저장 Core Data 를 사용하게 끔 변경
* Core Data 사용으로 변경
* TableViewCell 데이터 셋팅하도록 변경
* 현재 Core Data 에 데이터 저장이 안됨

--- a/wiseSaying/wiseSaying/View/Base.lproj/Main.storyboard
+++ b/wiseSaying/wiseSaying/View/Base.lproj/Main.storyboard
@@ -58,6 +58,11 @@
                                                 <constraint firstItem="XEd-Xw-aXl" firstAttribute="top" secondItem="KL4-y4-TkX" secondAttribute="top" constant="10" id="g1J-xZ-ZJw"/>
                                             </constraints>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="author" destination="xnj-PZ-SuO" id="vF8-5W-Bb6"/>
+                                            <outlet property="body" destination="XEd-Xw-aXl" id="BZE-l2-rIS"/>
+                                            <outlet property="dateString" destination="f7d-s8-aoT" id="aBO-T0-qBJ"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
