[code] 저장된 명언을 볼 수 있는 화면 추가

--- a/wiseSaying/wiseSaying/View/Base.lproj/Main.storyboard
+++ b/wiseSaying/wiseSaying/View/Base.lproj/Main.storyboard
@@ -106,11 +106,90 @@
                     <connections>
                         <outlet property="wiseSayingTableView" destination="Oe1-m0-5Dm" id="tM3-6V-LYr"/>
                         <segue destination="rsC-WU-jZW" kind="show" identifier="detailWiseSaying" id="EvA-tW-Fqw"/>
+                        <segue destination="3qO-zN-EzK" kind="show" identifier="showDetailWiseSaying" id="i1q-15-fDr"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="930.53435114503816" y="32.394366197183103"/>
+        </scene>
+        <!--Show Detail Wish Saying View Controller-->
+        <scene sceneID="rYS-mF-f8a">
+            <objects>
+                <viewController storyboardIdentifier="showDetailWishSayingViewController" modalPresentationStyle="fullScreen" id="3qO-zN-EzK" customClass="showDetailWishSayingViewController" customModule="wiseSaying" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="BAD-Vc-B8H">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jny-Yc-Uwy">
+                                <rect key="frame" x="20" y="123" width="353" height="530"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="530" id="33L-1V-QN0"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="명언 저자" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AJ1-ZP-zT4">
+                                <rect key="frame" x="20" y="673" width="65" height="20.333333333333371"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="65" id="Yq5-jL-yTV"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="작성 날짜" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JLr-nz-9A6">
+                                <rect key="frame" x="20" y="713.33333333333337" width="65" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="65" id="T0B-Ra-6a9"/>
+                                    <constraint firstAttribute="width" constant="65" id="hIl-6B-egZ"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="74o-Wz-vUc">
+                                <rect key="frame" x="105" y="673" width="268" height="20.333333333333371"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="d5A-aD-1pY">
+                                <rect key="frame" x="105" y="713.33333333333337" width="268" height="20.333333333333371"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="7Ze-18-OeI"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="d5A-aD-1pY" firstAttribute="leading" secondItem="JLr-nz-9A6" secondAttribute="trailing" constant="20" id="5ww-T5-LfS"/>
+                            <constraint firstItem="7Ze-18-OeI" firstAttribute="trailing" secondItem="d5A-aD-1pY" secondAttribute="trailing" constant="20" id="824-Bv-PD1"/>
+                            <constraint firstItem="AJ1-ZP-zT4" firstAttribute="leading" secondItem="7Ze-18-OeI" secondAttribute="leading" constant="20" id="EAL-Zr-sFr"/>
+                            <constraint firstItem="Jny-Yc-Uwy" firstAttribute="top" secondItem="7Ze-18-OeI" secondAttribute="top" constant="20" id="Eb6-6r-THp"/>
+                            <constraint firstItem="Jny-Yc-Uwy" firstAttribute="leading" secondItem="7Ze-18-OeI" secondAttribute="leading" constant="20" id="MiW-ub-TS4"/>
+                            <constraint firstItem="74o-Wz-vUc" firstAttribute="top" secondItem="Jny-Yc-Uwy" secondAttribute="bottom" constant="20" id="VFi-xA-9rQ"/>
+                            <constraint firstItem="JLr-nz-9A6" firstAttribute="top" secondItem="AJ1-ZP-zT4" secondAttribute="bottom" constant="20" id="VoV-bc-MUG"/>
+                            <constraint firstItem="d5A-aD-1pY" firstAttribute="top" secondItem="74o-Wz-vUc" secondAttribute="bottom" constant="20" id="Woc-KY-SKt"/>
+                            <constraint firstItem="AJ1-ZP-zT4" firstAttribute="top" secondItem="Jny-Yc-Uwy" secondAttribute="bottom" constant="20" id="aXK-TD-ysA"/>
+                            <constraint firstItem="74o-Wz-vUc" firstAttribute="leading" secondItem="AJ1-ZP-zT4" secondAttribute="trailing" constant="20" id="bOl-kh-cdJ"/>
+                            <constraint firstItem="7Ze-18-OeI" firstAttribute="trailing" secondItem="Jny-Yc-Uwy" secondAttribute="trailing" constant="20" id="nHX-pK-0Cs"/>
+                            <constraint firstItem="JLr-nz-9A6" firstAttribute="leading" secondItem="7Ze-18-OeI" secondAttribute="leading" constant="20" id="smo-EQ-KCo"/>
+                            <constraint firstItem="7Ze-18-OeI" firstAttribute="trailing" secondItem="74o-Wz-vUc" secondAttribute="trailing" constant="20" id="z86-Xr-o88"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="Onj-sK-Qba"/>
+                    <connections>
+                        <outlet property="author" destination="74o-Wz-vUc" id="KuC-73-wK5"/>
+                        <outlet property="body" destination="Jny-Yc-Uwy" id="KqK-7q-zHb"/>
+                        <outlet property="dateString" destination="d5A-aD-1pY" id="LGX-ow-fQA"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="86b-fE-xLh" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1788.5496183206105" y="-608.45070422535218"/>
         </scene>
         <!--Detail Wise Saying View Controller-->
         <scene sceneID="VwL-6u-jTf">
