--- a/wiseSaying/wiseSaying/View/Base.lproj/Main.storyboard
+++ b/wiseSaying/wiseSaying/View/Base.lproj/Main.storyboard
@@ -27,7 +27,7 @@
                                             <rect key="frame" x="0.0" y="0.0" width="393" height="113"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="명언 내용" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XEd-Xw-aXl">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="명언 제목" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XEd-Xw-aXl">
                                                     <rect key="frame" x="20" y="10" width="353" height="62"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
@@ -60,8 +60,8 @@
                                         </tableViewCellContentView>
                                         <connections>
                                             <outlet property="author" destination="xnj-PZ-SuO" id="vF8-5W-Bb6"/>
-                                            <outlet property="body" destination="XEd-Xw-aXl" id="BZE-l2-rIS"/>
                                             <outlet property="dateString" destination="f7d-s8-aoT" id="aBO-T0-qBJ"/>
+                                            <outlet property="wiseTitle" destination="XEd-Xw-aXl" id="utX-tL-HNg"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -122,7 +122,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jny-Yc-Uwy">
-                                <rect key="frame" x="20" y="123" width="353" height="530"/>
+                                <rect key="frame" x="20" y="143.33333333333337" width="353" height="530"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="530" id="33L-1V-QN0"/>
                                 </constraints>
@@ -131,7 +131,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="명언 저자" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AJ1-ZP-zT4">
-                                <rect key="frame" x="20" y="673" width="65" height="20.333333333333371"/>
+                                <rect key="frame" x="20" y="693.33333333333337" width="65" height="20.333333333333371"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="65" id="Yq5-jL-yTV"/>
                                 </constraints>
@@ -140,7 +140,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="작성 날짜" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JLr-nz-9A6">
-                                <rect key="frame" x="20" y="713.33333333333337" width="65" height="21"/>
+                                <rect key="frame" x="20" y="733.66666666666663" width="65" height="21"/>
                                 <constraints>
                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="65" id="T0B-Ra-6a9"/>
                                     <constraint firstAttribute="width" constant="65" id="hIl-6B-egZ"/>
@@ -150,13 +150,19 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="74o-Wz-vUc">
-                                <rect key="frame" x="105" y="673" width="268" height="20.333333333333371"/>
+                                <rect key="frame" x="105" y="693.33333333333337" width="268" height="20.333333333333371"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nKm-mm-2Qt">
+                                <rect key="frame" x="20" y="103" width="353" height="20.333333333333329"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="d5A-aD-1pY">
-                                <rect key="frame" x="105" y="713.33333333333337" width="268" height="20.333333333333371"/>
+                                <rect key="frame" x="105" y="733.66666666666663" width="268" height="20.333333333333371"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -165,12 +171,15 @@
                         <viewLayoutGuide key="safeArea" id="7Ze-18-OeI"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="7Ze-18-OeI" firstAttribute="bottom" secondItem="d5A-aD-1pY" secondAttribute="bottom" constant="84.329999999999998" id="4ep-h0-s9y"/>
+                            <constraint firstItem="7Ze-18-OeI" firstAttribute="trailing" secondItem="nKm-mm-2Qt" secondAttribute="trailing" constant="20" id="5gH-U5-HBM"/>
                             <constraint firstItem="d5A-aD-1pY" firstAttribute="leading" secondItem="JLr-nz-9A6" secondAttribute="trailing" constant="20" id="5ww-T5-LfS"/>
                             <constraint firstItem="7Ze-18-OeI" firstAttribute="trailing" secondItem="d5A-aD-1pY" secondAttribute="trailing" constant="20" id="824-Bv-PD1"/>
+                            <constraint firstItem="nKm-mm-2Qt" firstAttribute="top" secondItem="7Ze-18-OeI" secondAttribute="top" id="ACj-bj-o79"/>
                             <constraint firstItem="AJ1-ZP-zT4" firstAttribute="leading" secondItem="7Ze-18-OeI" secondAttribute="leading" constant="20" id="EAL-Zr-sFr"/>
-                            <constraint firstItem="Jny-Yc-Uwy" firstAttribute="top" secondItem="7Ze-18-OeI" secondAttribute="top" constant="20" id="Eb6-6r-THp"/>
+                            <constraint firstItem="nKm-mm-2Qt" firstAttribute="leading" secondItem="7Ze-18-OeI" secondAttribute="leading" constant="20" id="LLw-rY-cj2"/>
+                            <constraint firstItem="d5A-aD-1pY" firstAttribute="top" secondItem="74o-Wz-vUc" secondAttribute="bottom" constant="20" id="M0j-v0-JTb"/>
                             <constraint firstItem="Jny-Yc-Uwy" firstAttribute="leading" secondItem="7Ze-18-OeI" secondAttribute="leading" constant="20" id="MiW-ub-TS4"/>
+                            <constraint firstItem="Jny-Yc-Uwy" firstAttribute="top" secondItem="nKm-mm-2Qt" secondAttribute="bottom" constant="20" id="Ul5-op-Czr"/>
                             <constraint firstItem="74o-Wz-vUc" firstAttribute="top" secondItem="Jny-Yc-Uwy" secondAttribute="bottom" constant="20" id="VFi-xA-9rQ"/>
                             <constraint firstItem="JLr-nz-9A6" firstAttribute="top" secondItem="AJ1-ZP-zT4" secondAttribute="bottom" constant="20" id="VoV-bc-MUG"/>
                             <constraint firstItem="AJ1-ZP-zT4" firstAttribute="top" secondItem="Jny-Yc-Uwy" secondAttribute="bottom" constant="20" id="aXK-TD-ysA"/>
@@ -182,6 +191,7 @@
                     </view>
                     <navigationItem key="navigationItem" id="Onj-sK-Qba"/>
                     <connections>
+                        <outlet property="Showtitle" destination="nKm-mm-2Qt" id="m6W-Zi-XGC"/>
                         <outlet property="author" destination="74o-Wz-vUc" id="KuC-73-wK5"/>
                         <outlet property="body" destination="Jny-Yc-Uwy" id="KqK-7q-zHb"/>
                         <outlet property="dateString" destination="d5A-aD-1pY" id="LGX-ow-fQA"/>
@@ -199,11 +209,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" placeholder="명언을 입력해 주세요" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="rXD-74-WHJ">
-                                <rect key="frame" x="20" y="153" width="353" height="511"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="명언 저자 입력" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="r7t-CX-gBf">
                                 <rect key="frame" x="20" y="684" width="101" height="34"/>
                                 <constraints>
@@ -231,28 +236,48 @@
                                     <action selector="finishButton:" destination="rsC-WU-jZW" eventType="touchUpInside" id="p5K-AX-8za"/>
                                 </connections>
                             </button>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="명언을 입력하는 란입니다." textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="3Gk-D6-u9V">
+                                <rect key="frame" x="20" y="157" width="353" height="507"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <color key="textColor" systemColor="labelColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="제목을 입력해 주세요" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="MBV-r5-Zib">
+                                <rect key="frame" x="20" y="103" width="353" height="34"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="34" id="QTq-Cv-kRT"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="353" id="Qiv-xo-kLa"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="5Kg-0c-r8c"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="r7t-CX-gBf" firstAttribute="top" secondItem="rXD-74-WHJ" secondAttribute="bottom" constant="20" id="16M-sM-NIr"/>
+                            <constraint firstItem="5Kg-0c-r8c" firstAttribute="trailing" secondItem="MBV-r5-Zib" secondAttribute="trailing" constant="20" id="0Iz-0H-cK0"/>
                             <constraint firstItem="tgn-Lt-Xo4" firstAttribute="top" secondItem="r7t-CX-gBf" secondAttribute="bottom" constant="20" id="3Sb-Di-qXS"/>
                             <constraint firstItem="5Kg-0c-r8c" firstAttribute="bottom" secondItem="r7t-CX-gBf" secondAttribute="bottom" constant="100" id="3Xk-LS-ag3"/>
                             <constraint firstItem="5Kg-0c-r8c" firstAttribute="trailing" secondItem="Vsf-pk-gdf" secondAttribute="trailing" constant="20" id="52V-OK-ERf"/>
-                            <constraint firstItem="5Kg-0c-r8c" firstAttribute="trailing" secondItem="rXD-74-WHJ" secondAttribute="trailing" constant="20" id="CNb-dF-pfx"/>
                             <constraint firstItem="5Kg-0c-r8c" firstAttribute="trailing" secondItem="tgn-Lt-Xo4" secondAttribute="trailing" constant="20" id="Gca-Wf-2E0"/>
+                            <constraint firstItem="MBV-r5-Zib" firstAttribute="top" secondItem="5Kg-0c-r8c" secondAttribute="top" id="Gp9-5k-Al9"/>
                             <constraint firstItem="5Kg-0c-r8c" firstAttribute="bottom" secondItem="Vsf-pk-gdf" secondAttribute="bottom" constant="100" id="J6O-Ka-l0m"/>
-                            <constraint firstItem="rXD-74-WHJ" firstAttribute="leading" secondItem="5Kg-0c-r8c" secondAttribute="leading" constant="20" id="KPe-u9-vS5"/>
+                            <constraint firstItem="3Gk-D6-u9V" firstAttribute="leading" secondItem="5Kg-0c-r8c" secondAttribute="leading" constant="20" id="P9W-34-UQX"/>
                             <constraint firstItem="5Kg-0c-r8c" firstAttribute="bottom" secondItem="tgn-Lt-Xo4" secondAttribute="bottom" constant="40" id="PNc-BH-oW4"/>
+                            <constraint firstItem="MBV-r5-Zib" firstAttribute="leading" secondItem="5Kg-0c-r8c" secondAttribute="leading" constant="20" id="RwP-WA-j9r"/>
+                            <constraint firstItem="5Kg-0c-r8c" firstAttribute="trailing" secondItem="3Gk-D6-u9V" secondAttribute="trailing" constant="20" id="TWS-UV-GtG"/>
                             <constraint firstItem="tgn-Lt-Xo4" firstAttribute="leading" secondItem="5Kg-0c-r8c" secondAttribute="leading" constant="20" id="Xlc-jn-XJN"/>
+                            <constraint firstItem="3Gk-D6-u9V" firstAttribute="top" secondItem="MBV-r5-Zib" secondAttribute="bottom" constant="20" id="Yzy-1y-QJ8"/>
+                            <constraint firstItem="r7t-CX-gBf" firstAttribute="top" secondItem="3Gk-D6-u9V" secondAttribute="bottom" constant="20" id="jkc-Bb-LJl"/>
                             <constraint firstItem="r7t-CX-gBf" firstAttribute="leading" secondItem="5Kg-0c-r8c" secondAttribute="leading" constant="20" id="sV9-0i-0ZY"/>
-                            <constraint firstItem="rXD-74-WHJ" firstAttribute="top" secondItem="5Kg-0c-r8c" secondAttribute="top" constant="50" id="zQI-HT-Ptc"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="f1I-D8-hpb"/>
                     <connections>
                         <outlet property="authorField" destination="Vsf-pk-gdf" id="6hc-CK-YNZ"/>
-                        <outlet property="bodyField" destination="rXD-74-WHJ" id="BGW-F0-YeO"/>
+                        <outlet property="bodyField" destination="3Gk-D6-u9V" id="0L0-h2-Hte"/>
+                        <outlet property="titleField" destination="MBV-r5-Zib" id="eN0-MN-Jrt"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fHQ-R4-MOW" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -281,6 +306,9 @@
     <resources>
         <image name="plus" catalog="system" width="128" height="113"/>
         <image name="trash" catalog="system" width="117" height="128"/>
+        <systemColor name="labelColor">
+            <color red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
